src/test/deca/context/valid/homeMade/tests/test02_affectation_type.deca
// test valide de la règle 0.2


{
    int a = 7;
    float b = 0.5;
    String c = "toto";
    boolean d = true;
}